--- a/jdeGB/Base.lproj/MainMenu.xib
+++ b/jdeGB/Base.lproj/MainMenu.xib
@@ -11,10 +11,10 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="jdeGB" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="EiT-Mj-1SZ" id="mKz-aP-KZC"/>
+                <outlet property="view" destination="EiT-Mj-1SZ" id="9et-wE-aiI"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
